--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <div id="tagsUList"></div>
       <div class="color5 bg8 row row-bar m-2" id="tagCheckedHeader"></div>
       <div id="tagsCList"></div>
-      <div class="color5 bg8 p-2 row-bar m-2 pl-3" id="unchekedHeader"></div>
+      <div class="color5 bg8 p-2 row-bar m-2 pl-3" id="uncheckedHeader"></div>
       <div id="checkedList"></div>
       <div class="color5 bg8 p-2 row-bar m-2 pl-3" id="checkedHeader"></div>
-      <div id="unchekedList"></div>
+      <div id="uncheckedList"></div>
 
       <!-- fake bottom -->
       <div class="py-1 footBtn"><img src="images/1x1.gif"></div>
@@ -55,6 +55,6 @@
     <script src="inc/jquery-3.3.1.min.js"></script>
     <script src="inc/jquery-ui.min.js"></script>
     <script src="inc/utilities/jquery.func.min.js"></script>
-    <script src="inc/script.js"></script>
+    <script src="inc/script.min.js"></script>
   </body>
 </html>
